Compilation_Racket_Mips/piton/tests/errors/assign_type.py
a: int = 1
a = "ABC"